--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,43 +1,72 @@
-# ______  _                           ______                _____ __   __  #
-# | ___ \| |                          | ___ \              |  ___|\ \ / /  #
-# | |_/ /| |  __ _  _   _   ___  _ __ | |_/ /  __ _  _ __  | |__   \ V /   #
-# |  __/ | | / _` || | | | / _ \| '__|| ___ \ / _` || '_ \ |  __|  /   \   #
-# | |    | || (_| || |_| ||  __/| |   | |_/ /| (_| || | | || |___ / /^\ \  #
-# \_|    |_| \__,_| \__, | \___||_|   \____/  \__,_||_| |_|\____/ \/   \/  #
-#                    __/ |                                                 #
-#                   |___/                                                  #
-
 # 全局设置
 options:
-  # 插件更新提醒
+  # 启用插件更新提醒
   update: true
-  # 启用bstats统计
+  # 启用bStats数据统计
   metrics: true
   # 启用调试模式
-  debug: true
+  debug: false
+  # 玩家信息标识符 (name, uuid)
+  player-id: name
+  # 默认变量值相关
+  default-value:
+    # 请出原因
+    kick-reason: "管理员未填写请出原因"
+    # 请出原因
+    ban-reason: "管理员未填写封禁原因"
   # 时间格式
-  time-format: "yyyy年MM月dd日HH时mm分ss秒"
-  # 命令中封禁期限"period"变量的格式
-  period-format: "yyyy年MM月dd日HH时mm分ss秒"
-  # 请出格式
-  kick-format:
-    - "&c您已被管理员从服务器请出！\n"
-    - "\n"
-    - "&7玩家名称: &f{0}\n"
-    - "&7请出原因: &f{1}\n"
-    - "\n"
-    - "&7操作管理: &f{3}\n"
-    - "&7操作时间: &f{2}\n"
-    - "&7查看详情: &b&nhttps://www.mcbbs.net/\n"
-    - "\n"
-  # 封禁格式
-  ban-format:
-    - "&c您已被管理员从服务器封禁至{1}！\n"
-    - "\n"
-    - "&7玩家名称: &f{0}\n"
-    - "&7封禁原因: &f{2}\n"
-    - "\n"
-    - "&7操作管理: &f{4}\n"
-    - "&7操作时间: &f{3}\n"
-    - "&7查看详情: &b&nhttps://www.mcbbs.net/\n"
-    - "\n"
+  time-format:
+    # 日期格式 (LocalDate)
+    date: "yyyy-MM-dd"
+    # 时间格式 (LocalTimeDate)
+    time: "yyyy-MM-dd HH:mm:ss"
+    # 时长格式
+    duration:
+      second: "s"
+      minute: "m"
+      hour: "H"
+      day: "d"
+      week: "w"
+      month: "M"
+      year: "y"
+  # 数据存储相关
+  database:
+    # 存储方式 (JSON, CBOR)
+    type: JSON
+    uri: database.json
+  # 消息格式相关
+  message-format:
+    # 请出消息格式
+    # {0} -> 玩家名称
+    # {1} -> 玩家UUID
+    # {2} -> 请出原因
+    # {3} -> 操作管理
+    # {4} -> 操作时间
+    kick:
+      - "&c您已被管理员从服务器请出！\n"
+      - "\n"
+      - "&7玩家名称: &f{0}\n"
+      - "&7请出原因: &f{2}\n"
+      - "\n"
+      - "&7操作管理: &f{3}\n"
+      - "&7操作时间: &f{4}\n"
+      - "&7查看详情: &b&nhttps://www.mcbbs.net/\n"
+      - "\n"
+    # 封禁消息格式
+    # {0} -> 玩家名称
+    # {1} -> 玩家UUID
+    # {2} -> 封禁原因
+    # {3} -> 操作管理
+    # {4} -> 操作时间
+    # {5} -> 解封时间
+    # {6} -> 封禁时长
+    ban:
+      - "&c您已被管理员从服务器封禁至{5}！\n"
+      - "\n"
+      - "&7玩家名称: &f{0}\n"
+      - "&7封禁原因: &f{2}\n"
+      - "\n"
+      - "&7操作管理: &f{3}\n"
+      - "&7操作时间: &f{4}\n"
+      - "&7查看详情: &b&nhttps://www.mcbbs.net/\n"
+      - "\n"
