[3.0.6] [+]新增白名单相关功能

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,6 +12,8 @@ options:
   metrics: true
   # 启用调试模式
   debug: false
+  # 启用白名单功能
+  whitelist: false
   # 玩家信息标识符 (name, uuid)
   player-id: name
   # 默认变量值相关
@@ -63,7 +65,7 @@ options:
       - "\n"
       - "&7操作管理: &f{3}\n"
       - "&7操作时间: &f{4}\n"
-      - "&7查看详情: &b&nhttps://www.mcbbs.net/\n"
+      - "&7查看详情: &b&n请前往服务器交流群/官网\n"
       - "\n"
     # 封禁消息格式
     # {0} -> 玩家名称
@@ -81,5 +83,14 @@ options:
       - "\n"
       - "&7操作管理: &f{3}\n"
       - "&7操作时间: &f{4}\n"
-      - "&7查看详情: &b&nhttps://www.mcbbs.net/\n"
+      - "&7查看详情: &b&n请前往服务器交流群/官网\n"
+      - "\n"
+    # 封禁消息格式
+    # {0} -> 玩家名称
+    # {1} -> 玩家UUID
+    whitelist:
+      - "&c您不在服务器的白名单中！\n"
+      - "\n"
+      - "&7玩家名称: &f{0}\n"
+      - "&7申请白名单: &b&n请前往服务器交流群/官网\n"
       - "\n"
