--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -18,9 +18,11 @@
 # 全局设置
 Options:
   # 配置文件版本
-  Config-Version: 2
+  Config-Version: 3
   # 检查版本更新
   Check-Update: true
+  # OP 版本更新通知
+  OP-Notify: true
   # 启用 bStats 统计
   Send-Metrics: true
   # 启用调试模式
